# Atheon

./: .gitignore  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts  vitest.verification.config.ts
.github/workflows/: ci.yml  deploy-api.yml  deploy-frontend.yml  go-live-gate.yml  staging-e2e.yml
agent/src/: agent.ts
docs/: ANALYTICAL_CHAIN.md  FEATURE_SWEEP_2026-05-10.md  GO_LIVE_CHECKLIST.md  PHASE_10_ANALYTICAL_CHAIN.md  RUNBOOK_DEFERRED.md  RUNBOOK_OPS.md  RUNBOOK_RCA.md  RUNBOOK_WRITEBACK.md  STITCH_DESIGN_BRIEF.md  STITCH_MIGRATION.md  UI_POLISH_PRINCIPLES.md  WORLD_CLASS_FRONTEND_PROPOSAL.md  runbook-rca.md
docs/runbooks/: go-live.md
e2e/: load-test.ts  package-lock.json  package.json  playwright.config.ts
e2e/fixtures/: real-login.ts
e2e/tests/: auth.spec.ts  pages.spec.ts  traceability.spec.ts
load-test-results/: api-status.json  healthz-postfix.json  healthz.json  scim-discovery.json
public/: manifest.json
scripts/: check-bundle-size.mjs  generate-pwa-icons.mjs  load-test.mjs
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/src/atheon_sdk/: __init__.py  client.py  types.py
sdks/python/tests/: test_client.py
sdks/typescript/: package-lock.json
src/: App.tsx  index.css  main.tsx
src/components/: AnomalyDetectionControls.tsx  AssessmentFindingsPanel.tsx  BackupCodesDisplay.tsx  CatalystSimulatorCard.tsx  CompanySwitcher.tsx  CorrelationMatrix.tsx  DimensionComparisonGrid.tsx  FilterBar.tsx  HealthTrendChart.tsx  ImplementationDot.tsx  MFAEnrollmentWizard.tsx  (+14 more)
verification/: _smoke.test.ts  config.ts  global-setup.ts
(+406 files in other folders)
