[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "atheon-sdk"
version = "0.1.0"
description = "Official Python SDK for Atheon — Enterprise Intelligence Platform."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "VantaX, Pty (Ltd).", email = "support@vantax.co.za" }]
keywords = ["atheon", "vantax", "sdk", "erp", "ai", "catalyst"]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://atheon.vantax.co.za"
Repository = "https://github.com/VantaX-Org/Atheon"
Issues = "https://github.com/VantaX-Org/Atheon/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.8",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/atheon_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PT"]
ignore = ["E501"]  # line-length governed by ruff format

[tool.mypy]
python_version = "3.10"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
